--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,9 +1,3 @@
 <h1>Edit Story</h1>
 
-<%= form_for @story do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :image_url %>
-  <%= f.text_field :image_url %>
-  <%= f.submit %>
-<% end %>
+<%= render "form" %>
