--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,10 +1,3 @@
 <h1>New Story</h1>
 
-<%= form_for @story do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :image_url %>
-  <%= f.text_field :image_url %>
-
-  <%= f.submit  %>
-<% end %>
+<%= render "form" %>
