--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -2,5 +2,8 @@
 
 <%= image_tag @story.image_url %>
 
-
+<p><%= link_to "Edit", edit_story_path(@story) %></p>
+<p><%= link_to "Delete", story_path(@story),
+                          :data => {:confirm => "Are you sure?",
+                                    :method => "delete"} %></p>
 <hr>
