--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @stories.each do |story| %>
-  <li><%= link_to story.title, story_path(story) %> | <%= image_tag story.image_url %></li>
+  <li><%= link_to story.title, story_path(story) %></li>
   <% end %>
 </ul>
 
