add edit & delete links to sentence.html.erb

--- a/app/views/sentences/show.html.erb
+++ b/app/views/sentences/show.html.erb
@@ -6,3 +6,10 @@
 
 
 <%= image_tag @sentence.image_url %>
+<br><br>
+
+<%= link_to "Edit", edit_story_sentence_path(@story, @sentence) %>
+<br>
+<%= link_to "Delete", story_sentence_path(@story, @sentence),
+                                 :data => {:confirm => "Are you sure?",
+                                                :method => "delete"} %>
